--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <!-- links -->
             <ul>
                 <li class="list-items"><a class="list" href="#Homecontent">Home</a></li>
-                <li class="list-items"><a class="list" href="#about">About</a></li>
+                <li class="list-items"><a class="list" href="#about">About Me</a></li>
                 <li class="list-items"><a class="list" href="#skill">Skills</a></li>
-                <li class="list-items"><a class="list" href="#contacts">Contact</a></li>
+                <li class="list-items"><a class="list" href="#contacts">Contacts</a></li>
 
             </ul>
         </nav>
